[package]
name = "themis-core"
version = "0.1.0"
authors = ["Kai Bleeke <k.bleeke@tu-bs.de>"]
edition = "2021"

[dependencies]
bitflags = "1.3.2"
bytes = { version = "1.1.0", features = ["serde"] }
tracing = { version = "0.1.29" }
rmp-serde = "1.0.0"
toml = "0.5.8"
ring = { version = "0.16.20", features = ["std"] }
num_cpus = "1.13.1"
fnv = "1.0.7"
pin-project = "1.0.10"
rand = "0.8.4"
arc-swap = "1.5.0"
lazy_static = "1.4.0"
serde_bytes = "0.11.5"
once_cell = "1.9.0"
futures-util = { version = "0.3.19", features = ["sink"] }
hyper = { version = "0.14.16", features = ["http1", "server", "tcp"], optional = true }
prometheus = { version = "0.13.0", features = ["process"], optional = true }
thiserror = "1"
anyhow = "1"

[dependencies.themis-config]
path = "../themis-config/"

[dependencies.serde]
features = ["derive"]
version = "1.0.134"

[dependencies.tokio]
version = "1.15.0"
features = ["net", "rt-multi-thread", "time", "sync", "macros"]

[dependencies.tokio-util]
version = "0.6.9"
features = ["codec"]

[dev-dependencies]
assert_matches = "1.5.0"
tokio = { version = "1.15.0", features = ["macros", "io-util", "test-util"] }
criterion = { version = "0.3.5", features = ["html_reports"] }
rand = "0.8.4"
tracing-subscriber = "0.3.6"

[[bench]]
name = "crypto"
harness = false

[features]
metrics = ["hyper", "prometheus"]
