[package]
name = "bench-client"
version = "0.1.0"
authors = ["Kai Bleeke <k.bleeke@tu-bs.de>"]
edition = "2021"

[dependencies]
themis-client = {path = "../../themis-client"}
themis-core = {path = "../../themis-core"}
bytes = "1.1.0"
tracing = { version = "0.1.29", package = "tracing" }
rand = "0.8.4"
futures-util = "0.3.19"
crossbeam-utils = "0.8.6"
clap = { version = "3.0.10", features = ["derive"] }
tracing-subscriber = "0.3.6"
tracing-futures = "0.2.5"
