[package]
name = "kvs-client"
version = "0.1.0"
authors = ["Jan Niklas Drescher <drescher@ibr.cs.tu-bs.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate_type = ["staticlib"]
#crate-type = ["cdylib"]

[dependencies]
bytes = { version = "1.1.0", features = ["serde"] }
serde_bytes = "0.11.5"
rmp-serde = "1.0.0"
thiserror = "1.0.30"
rand = "0.8.4"
futures = "0.3.19"
libc = "0.2.113"
tokio = { version = "1.15.0", features = ["sync"] }
futures-util = "0.3.19"
kvs-core = {path="../../themis-apps/kvs/kvs-core"}

[dependencies.serde]
features = ["derive"]
version = "1.0.134"

# [dependencies.kvs]
# path = "../kvs"

[dependencies.themis-client]
path = "../../themis-client"

[dependencies.themis-core]
path = "../../themis-core"
